# sudox-android

./: .gitignore  .gitmodules  Inspections.xml  README.md  build.gradle  detekt-config.yml  detekt.gradle  gradle.properties  settings.gradle
api/: build.gradle
cipher/src/main/jni/crypto++/: CMakeLists.txt  cpu.h  pem-com.cpp  pem-test.cxx
cryptography/src/main/jni/: BLAKE2b.cpp  CMakeLists.txt  ChaCha20.cpp  Random.cpp  X25519.cpp  build.sh
encryption/src/main/jni/openssl/: CMakeLists.txt  build.sh  toolchains_path.py
encryption/src/main/jni/openssl/openssl-1.1.1c/: Makefile  configdata.pm  libcrypto.pc
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/: buildinf.h  cryptlib.d  init.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/asn1/: a_bitstr.d  a_d2i_fp.d  a_digest.d  a_dup.d  a_gentm.d  a_i2d_fp.d  a_mbstr.d  a_object.d  a_octet.d  a_print.d  a_sign.d  a_strex.d  a_strnid.d  a_time.d  a_type.d  a_utctm.d  a_utf8.d  a_verify.d  ameth_lib.d  asn1_gen.d  asn1_item_list.d  asn1_lib.d  asn1_par.d  asn_mime.d  asn_moid.d  asn_mstbl.d  asn_pack.d  bio_asn1.d  bio_ndef.d  d2i_pr.d  d2i_pu.d  evp_asn1.d  f_int.d  f_string.d  i2d_pr.d  i2d_pu.d  n_pkey.d  nsseq.d  p5_pbe.d  p5_pbev2.d  (+20 more)
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/async/: async.d  async_wait.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/bio/: b_addr.d  bf_lbuf.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/bn/: bn_depr.d  bn_srp.d  rsaz_exp.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/conf/: conf_mall.d  conf_mod.d  conf_sap.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/dh/: dh_ameth.d  dh_depr.d  dh_kdf.d  dh_key.d  dh_meth.d  dh_pmeth.d  dh_prn.d  dh_rfc5114.d  dh_rfc7919.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/dsa/: dsa_ameth.d  dsa_asn1.d  dsa_depr.d  dsa_gen.d  dsa_key.d  dsa_lib.d  dsa_meth.d  dsa_ossl.d  dsa_pmeth.d  dsa_prn.d  dsa_sign.d  dsa_vrf.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/ec/: curve25519.d  ec2_oct.d  ec_ameth.d  ec_asn1.d  ec_check.d  ec_curve.d  ec_cvt.d  ec_key.d  ec_kmeth.d  ec_lib.d  ec_oct.d  ec_pmeth.d  ec_print.d  ecdh_kdf.d  ecdsa_sign.d  ecdsa_vrf.d  eck_prn.d  ecp_mont.d  ecp_nist.d  ecp_nistz256.d  ecp_oct.d  ecp_smpl.d  ecx_meth.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/err/: err_all.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/evp/: bio_b64.d  bio_enc.d  bio_md.d  bio_ok.d  c_allc.d  c_alld.d  cmeth_lib.d  digest.d  e_aes.d  e_aes_cbc_hmac_sha1.d  e_aes_cbc_hmac_sha256.d  e_aria.d  e_bf.d  e_camellia.d  e_cast.d  e_chacha20_poly1305.d  e_des.d  e_des3.d  e_idea.d  e_null.d  e_old.d  e_rc2.d  e_rc4.d  e_rc4_hmac_md5.d  e_seed.d  e_sm4.d  e_xcbc_d.d  encode.d  evp_cnf.d  evp_enc.d  evp_key.d  evp_lib.d  evp_pbe.d  evp_pkey.d  m_md4.d  m_md5.d  m_md5_sha1.d  m_mdc2.d  m_null.d  m_ripemd.d  (+18 more)
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/hmac/: hm_ameth.d  hm_pmeth.d  hmac.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/kdf/: hkdf.d  scrypt.d  tls1_prf.d
encryption/src/main/jni/openssl/openssl-1.1.1c/crypto/objects/: o_names.d  obj_dat.d  obj_lib.d  obj_xref.d
encryption/src/main/jni/openssl/openssl-1.1.1c/ssl/: bio_ssl.d  d1_lib.d  d1_msg.d  d1_srtp.d  methods.d  pqueue.d  s3_cbc.d  s3_enc.d  s3_lib.d  s3_msg.d  ssl_asn1.d  ssl_cert.d  ssl_ciph.d  ssl_conf.d  ssl_init.d  ssl_lib.d  ssl_mcnf.d  ssl_rsa.d  ssl_sess.d  ssl_stat.d  ssl_txt.d  ssl_utst.d  t1_enc.d  t1_lib.d  t1_trce.d  tls13_enc.d  tls_srp.d
encryption/src/main/jni/openssl/openssl-1.1.1c/test/: buildtest_asn1.d  buildtest_asn1t.d  buildtest_async.d  buildtest_blowfish.d  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_dh  buildtest_c_dsa  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  buildtest_c_ecdh  buildtest_c_ecdsa  buildtest_c_evp  buildtest_c_hmac  buildtest_c_kdf  buildtest_c_lhash  buildtest_c_md5  buildtest_c_modes  buildtest_c_obj_mac  buildtest_c_objects  buildtest_c_opensslv  buildtest_c_ossl_typ  buildtest_c_pem  buildtest_c_pem2  buildtest_c_pkcs12  buildtest_c_pkcs7  buildtest_c_rand  buildtest_c_rand_drbg  buildtest_c_ripemd  (+38 more)
encryption/src/main/jni/sencryption/: CMakeLists.txt  Main.cpp
encryption/src/main/jni/sencryption/aes/: AES.cpp  AES.h
encryption/src/main/jni/sencryption/base64/: Base64.cpp  Base64.h
encryption/src/main/jni/sencryption/common/: KeysPair.cpp  KeysPair.h
encryption/src/main/jni/sencryption/ecdh/: ECDH.cpp  ECDH.h
encryption/src/main/jni/sencryption/ecdsa/: ECDSA.cpp  ECDSA.h
encryption/src/main/jni/sencryption/hmac/: HMAC.cpp  HMAC.h
encryption/src/main/jni/sencryption/random/: Random.cpp  Random.h
encryption/src/main/jni/sencryption/sha/: SHA.cpp  SHA.h
protocol/src/main/jni/: CMakeLists.txt  JNIWrapper.cpp  SocketClient.cpp  SocketClient.h  SocketListener.cpp  SocketListener.h
protocol/src/main/jni/callbacks/: SocketCallback.h
protocol/src/main/jni/crypto++/: CMakeLists.txt  Jamfile  cpu.h  pwdbased.h
protocol/src/main/jni/helpers/: JNIHelper.h
protocol/src/main/jni/scipher/: CMakeLists.txt  Main.cpp
protocol/src/main/jni/scipher/aes/: AES.cpp  AES.h
protocol/src/main/jni/scipher/base64/: Base64.cpp  Base64.h
protocol/src/main/jni/scipher/common/: KeysPair.cpp
protocol/src/main/jni/scipher/ecdh/: ECDH.cpp  ECDH.h
protocol/src/main/jni/scipher/ecdsa/: ECDSA.cpp
protocol/src/main/jni/scipher/hmac/: HMAC.cpp  HMAC.h
protocol/src/main/jni/scipher/random/: Random.cpp  Random.h
protocol/src/main/jni/scipher/sha/: SHA.cpp  SHA.h
protocol/src/main/jni/structs/: Data.h  Packet.h
sockets/src/main/jni/: CMakeLists.txt  JNIWrapper.cpp  SocketClient.cpp  SocketClient.h  SocketListener.cpp  SocketListener.h
sockets/src/main/jni/callbacks/: JNICallback.cpp  JNICallback.h  SocketCallback.h
sockets/src/main/jni/helpers/: JNIHelper.cpp  JNIHelper.h
sockets/src/main/jni/structs/: Data.h
(+2607 files in other folders)
